# test_for_Boto

./: .gitignore
backend/: Readme.md  boto.db  pyproject.toml
backend/src/: main.py
backend/src/api/: exception_handlers.py  routers.py
backend/src/api/v1/: auth.py  page.py
backend/src/core/: config.py  log_manager.py
backend/src/db/: base_client.py  session.py
backend/src/db/clients/: lite_client.py
backend/src/models/: __init__.py  base.py
backend/src/schemas/: common.py  request.py  response.py
backend/src/templates/: link_stats.html
backend/src/utils/: exception.py  generators.py  time.py  type.py
backend/tests/: test_shortner.py
