[tool.poetry]
name = "Boto example"
version = "0.1.0"
description = "Tesst work for Boto"
authors = ["Ziltriz <jkikzw@gmail.com>"]
readme = "README.md"
packages = [{include = "main.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = { version = "^0.32.0", extras = ["standard"] }
pydantic = "^2.9.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0.1" 
jinja2 = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
ruff = "^0.6.8"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F",     # pycodestyle + pyflakes
    "W",          # warnings
    "I",          # isort
    "B", "B904",  # bugbear
    "UP",         # pyupgrade
    "SIM",        # flake8-simplify
    "ARG",        # flake8-unused-arguments
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]